# Hardened_NanoKVM

./: .gitignore  CHANGELOG.md  Makefile  README.md  _config.yml  index.html
.cargo/: config.toml
docs/: backend-api-inventory.md  build-notes.md  buildroot-2023-security-backport-plan.md  current-sysupgrade-build-trace.md  handoff.md  new-buildroot-sysupgrade-study.md  release-archive.md  rust-backend.md  sd-card-flashing.md  security-risk-inventory.md  system-update-github-releases.md  system-update-live-inventory.md  system-update-plan.md  vendor-sdk-build.md
kvmapp/jpg_stream/: S95nanokvm
kvmapp/system/init.d/: S01fs  S01syslogd  S02klogd  S03usbdev  S30eth  S40firewall  S49ntp  S95nanokvm
kvmapp/system/keys/: system-update-signing.pub.pem
kvmapp/system/mnt-data/: sensor_cfg.ini.OA  sensor_cfg.ini.SC035  (+1 more)
scripts/: apply-buildroot-2023-11-3-security-backports.sh  bootstrap-vendor-sdk.sh  build-rust-sd-image.sh  build-vendor-sdk-stock.sh  create-raw-system-update-bundle.sh  create-system-update-bundle.sh  create-system-update-metadata.sh  create-update-metadata.sh  extract-sd-raw-images.sh  inspect-vendor-upgrade.py  install-rust-backend.sh  package-rust-kvmapp.sh  validate-nanokvm-rootfs.sh  verify-system-update-metadata.sh  verify-update-metadata.sh
scripts/nanokvm/: switch-backend-go.sh  switch-backend-rust.sh
server-rust/: Cargo.toml  build.rs
server-rust/scripts/: build-linked-libkvm.sh
server-rust/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
server-rust/src/api/: account.rs  application.rs  autostart.rs  compatibility.rs  download.rs  hid.rs  mod.rs  network.rs  picoclaw.rs  script.rs  storage.rs  stream.rs  system_firewall.rs  system_log.rs  system_time.rs  system_update.rs  tailscale.rs  vm.rs  webrtc_stream.rs
server-rust/src/auth/: compat_crypto.rs  mod.rs  password.rs  session.rs  terminal_ticket.rs  token.rs
server-rust/src/ffi/: kvm.rs  mod.rs
server-rust/src/http/: cookie.rs  middleware.rs  mod.rs  routes.rs  tls.rs
server-rust/src/security/: headers.rs  mod.rs  rate_limit.rs
server-rust/src/system/: audit.rs  command.rs  files.rs  mod.rs  process.rs  service.rs
server-rust/src/update/: archive.rs
server-rust/src/ws/: hid.rs  mod.rs  origin.rs
web/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
(+78 files in other folders)
