[package]
name = "nanokvm-rust-server"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
aes = "0.8"
argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.8", features = ["json", "ws"] }
base64 = "0.22"
cbc = "0.1"
cipher = "0.4"
flate2 = "1"
md-5 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
