[package]
name = "nanokvm-rust-server"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[features]
default = []
linked-libkvm = []

[dependencies]
aes = "0.8"
argon2 = { version = "0.5", features = ["std"] }
async-stream = "0.3"
axum = { version = "0.8", features = ["json", "multipart", "ws"] }
base64 = "0.22"
bcrypt = "0.16.0"
bytes = "1"
cbc = "0.1"
cipher = "0.4"
flate2 = "1"
futures-util = { version = "0.3.32", features = ["sink"] }
md-5 = "0.10"
nix = { version = "0.29.0", features = ["net"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rcgen = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tokio-tungstenite = "0.29.0"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
webrtc = "0.17.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
